# AIProjects

./: .gitignore  README.md
ResearchLab/: README.md  pyproject.toml  requirements.txt
ResearchLab/agents/: searcher.py
ResearchLab/researchlab/: main.py
ResearchLab/researchlab/agents/: extractor.py  searcher.py
ResearchLab/researchlab/static/: chat.js  index.html  settings.html  style.css
ResearchLab/researchlab/tools/: searcher_tools.py
Translator/: README.md  app.py  chain.py  requirements.txt  server.py
research_lab/: __init__.py
research_lab/agents/: searcher.py
