[project]
name = "researchlab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.13.2",
    "bs4>=0.0.2",
    "dotenv>=0.9.9",
    "fastapi>=0.124.4",
    "itsdangerous>=2.2.0",
    "langchain>=1.1.3",
    "langchain-core>=1.1.3",
    "langchain-openai>=1.1.1",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
    "uvicorn>=0.38.0",
]
